@@ -49,6 +49,7 @@
     <WarningLevel>4</WarningLevel>
     <DebugType>full</DebugType>
     <ErrorReport>prompt</ErrorReport>
+    <UseVSHostingProcess>true</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <OutputPath>bin\Release\</OutputPath>
@@ -148,6 +149,7 @@
     </Compile>
     <Compile Include="Model\ClassWithAnyAttribute.cs" />
     <Compile Include="Model\ClassWithCompositeKey.cs" />
+    <Compile Include="Model\ClassWithElementList.cs" />
     <Compile Include="Model\ClassWithMappedField.cs">
       <SubType>Code</SubType>
     </Compile>
